--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: mysql2
-  database: cinema
+  database: cinemaAPI
   username: root
   password:
   host: 127.0.0.1
